# neuraltide

./: .gitignore  AGENTS.md  LICENSE  MASTER_TZ.md  README.md  pyproject.toml  requirements.txt
docs/: api_reference.md  architecture.md  config.md  constraints.md  core.md  data.md  examples.md  index.md  inputs.md  integrators.md  model.md  network.md  populations.md  synapses.md  training.md
examples/: _base_example.py  example_01_single_population.py  example_02_exc_inh_nmda.py  example_03_custom_population.py  example_04_fokker_planck.py  example_05_lfp_proxy.py  example_adjoint_direct.py  example_adjoint_with_stability.py  example_compare_gradients.py  example_gradient_method.py  example_initial_state.py  example_instability_demo.py  example_multi_input_to_population.py  example_mutual_inhibition.py  example_place_field_phase_precession.py  example_pop_izhikevich.py  example_pop_wilson_cowan.py  example_second_order_synapse.py  example_simple.py  example_syn_composite.py  example_syn_nmda.py  example_syn_static.py  example_syn_tsodyks_markram.py  example_syn_tsodyks_markram_numeric.py  example_von_mises.py  example_von_mises_with_synapse.py
neuraltide/: __init__.py
neuraltide/config/: __init__.py  schema.py
neuraltide/constraints/: __init__.py  param_constraints.py
neuraltide/core/: __init__.py  base.py  network.py  state.py  types.py
neuraltide/data/: __init__.py
neuraltide/inputs/: __init__.py  base.py  constant.py  place_field.py  sinusoidal.py  von_mises.py
neuraltide/integrators/: __init__.py  base.py  euler.py  heun.py  (+1 more)
tests/: conftest.py
(+35 files in other folders)
